Added applications page